feat(todo): get todo list action
