# docs/swagger.yaml
@@ -164,6 +164,59 @@ paths:
       tags:
       - auth
   /todo/:
+    get:
+      consumes:
+      - application/json
+      description: Get all todos
+      parameters:
+      - description: Sort by
+        enum:
+        - newest
+        - oldest
+        in: query
+        name: sort_by
+        type: string
+      - description: Filter
+        enum:
+        - completed
+        - uncompleted
+        in: query
+        name: filter
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/models.Todo'
+            type: array
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/api.Error'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/api.Error'
+        "403":
+          description: Forbidden
+          schema:
+            $ref: '#/definitions/api.Error'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/api.Error'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/api.Error'
+      security:
+      - jwt: []
+      summary: Get all todos
+      tags:
+      - todo
     post:
       consumes:
       - application/json
